# gidubsar

./: .gitignore  CMakeLists.txt  main.cpp
docs/: README.md  workflow.md
include/: Types.hpp  UiElement.hpp
include/uiElements/: Table.hpp
